@@ -1,3 +1,8 @@
+2006-04-15  Jan Schampera <jan.schampera@unix.net>
+
+	* lib/gmcontacts/gmcontacts.h, lib/gmcontacts/gmcontacts.cpp:
+	One step forward to a new API, this needed by the roster in future.
+
 2006-04-15  Julien Puydt  <jpuydt@free.fr>
 
 	* src/gui/callbacks.cpp, src/gui/main.cpp: Fixed #337798, thanks to
